[gd_scene load_steps=14 format=3 uid="uid://iy6y0brbaqck"]

[ext_resource type="Script" uid="uid://qhcahrxnbbra" path="res://Escenas/Fantasmas/Logica/player_mov.gd" id="1_rcuap"]
[ext_resource type="Texture2D" uid="uid://xum2uxnhgtse" path="res://Recursos/Capibara/shadow.png" id="2_0pvjh"]
[ext_resource type="SpriteFrames" uid="uid://bbvmv75wucxdg" path="res://Escenas/Fantasmas/Recursos/player_1_animation.tres" id="2_rcuap"]
[ext_resource type="Texture2D" uid="uid://trg7oj5scd0c" path="res://Recursos/Coop/particula_light.png" id="5_ikbbi"]
[ext_resource type="Shader" uid="uid://6lcqcfa5biyd" path="res://Escenas/Fantasmas/Recursos/light_2d.gdshader" id="6_ikbbi"]
[ext_resource type="AudioStream" uid="uid://cnssglprl570k" path="res://Recursos/Sonido/SFX/Key Acquired 001.wav" id="6_q37md"]
[ext_resource type="AudioStream" uid="uid://dc5ko5v288ddy" path="res://Recursos/Sonido/SFX/Healing Potion 003.wav" id="6_wmb30"]
[ext_resource type="AudioStream" uid="uid://dofhpjmlc1q0q" path="res://Recursos/Sonido/SFX/Calculations 002.wav" id="7_3e8jt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pycni"]
size = Vector2(10, 12)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ovdyv"]
shader = ExtResource("6_ikbbi")
shader_parameter/color = Vector4(100, 70, 50, 59)

[sub_resource type="Animation" id="Animation_ikbbi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ancher/Polygon2D:material:shader_parameter/color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector4(100, 70, 50, 59)]
}

[sub_resource type="Animation" id="Animation_ha8kp"]
resource_name = "binking"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ancher/Polygon2D:material:shader_parameter/color")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector4(100, 70, 50, 59), Vector4(100, 20, 40, 59), Vector4(100, 70, 50, 59), Vector4(100, 20, 40, 59), Vector4(100, 70, 50, 59)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ikbbi"]
_data = {
&"RESET": SubResource("Animation_ikbbi"),
&"binking": SubResource("Animation_ha8kp")
}

[node name="Player_1" type="CharacterBody2D" groups=["Player"]]
collision_mask = 9
motion_mode = 1
script = ExtResource("1_rcuap")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0.485703, 0.485704, 0.485703, 1)
position = Vector2(0, 2)
scale = Vector2(0.59375, 0.898438)
texture = ExtResource("2_0pvjh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 0
sprite_frames = ExtResource("2_rcuap")
animation = &"celebration"
frame_progress = 0.597218
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_pycni")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, 1)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_pycni")
debug_color = Color(0.77195, 0.39877, 0.519241, 0.42)

[node name="ancher" type="Area2D" parent="."]
rotation = 1.5708
collision_layer = 2
collision_mask = 0
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="ancher"]
position = Vector2(40.7838, -0.000147049)
rotation = -1.5708
scale = Vector2(0.243794, 0.581033)
color = Color(1, 1, 1, 0.466667)
shadow_enabled = true
texture = ExtResource("5_ikbbi")
texture_scale = 2.82

[node name="Polygon2D" type="Polygon2D" parent="ancher"]
z_index = 100
material = SubResource("ShaderMaterial_ovdyv")
position = Vector2(10, 0)
polygon = PackedVector2Array(45.9999, -16.0002, 0, 0, 46.0001, 15.9998, 54, 11.9998, 57, 6.99976, 60, -0.000253399, 57, -9.00024, 54, -13.0002)
uv = PackedVector2Array(45.9999, -16.0002, 0, 0, 46.0001, 15.9998, 54, 11.9998, 57, 6.99976, 60, -0.000253399, 57, -9.00024, 54, -13.0002)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ancher"]
visible = false
position = Vector2(10, 0)
polygon = PackedVector2Array(45.9999, -16.0002, 0, 0, 46.0001, 15.9998, 54, 11.9998, 57, 6.99976, 60, -0.000253399, 57, -9.00024, 54, -13.0002)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ikbbi")
}

[node name="alma_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q37md")
volume_db = -10.0

[node name="recover_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wmb30")
volume_db = -10.0

[node name="scream_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_3e8jt")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
